# pihnn

./: .gitignore  README.md  environment.yml  pyproject.toml
delete/: nn_devo.py  test_cracked_plate_pihnn_devo.py  utils_devo.py
pihnn/: graphics.py  utils.py
pihnn_devo/: __init__.py  config.py  graphics.py  nn.py  utils.py
scripts/: collect data_PIHNN.py  collect_data_PIHNN.py  cracks_finding_PIHNN.py  find_cracks_pihnn.py  s01_collect_data_pihnn.py  s02_find_cracks_pihnn.py  s03_test_cracked_plate_pihnn.py  test_cracked_plate_phinn.py  test_cracked_plate_pihnn.py
scripts/Nicolas_latest/: cracks_finding_PIHNN.py  utils_PIHNN.py
scripts/update pihnn/: cracks_finding_PIHNN.py  utils_PIHNN.py
