[tool.setuptools]
packages = ["pihnn_devo"]

[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pihnn_devo"
authors = [
    { name = "Nicolas Cuenca", email = "nicolas.cuenca@sigma-clermont.fr" },
    { name = "Jonas Hund", email = "jonas.hund@mpe.au.dk" },
    { name = "Tito Andriollo", email = "titoan@mpe.au.dk" },
]
description = "Developments based on the Physics-informed holomorphic neural networks (PIHNN) package of Matteo Calafà"
version = "1.0"
readme = "README.md"
license = { text = "LGPL-2.1" }
requires-python = ">=3.10"
